# rar-stream

./: .babelrc  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.yaml  .flowconfig  .gitignore  .npmignore  .tern-project  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  RarFile.js  RarHeaderParser.js  SECURITY.md  browser.d.ts  browser.js  cliff.toml  eslint.config.mjs  example.mjs  index.d.ts  index.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pw  rar-stream.test.ts  release-plz.toml  test-header.mjs  tsconfig.json  tsup.config.ts  vitest.config.ts  wallaby.config.js
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  release-plz.yml  test.yml
__fixtures__/encrypted/: rar4-encrypted-stored.rar  rar4-encrypted.rar  rar5-encrypted-content.rar  rar5-encrypted-headers.rar  rar5-encrypted-stored.rar  rar5-encrypted-v5.rar  rar5-encrypted.rar  testfile.txt
__fixtures__/large/: alpine_lzss.rar  alpine_m3.rar  alpine_rar5.rar
__fixtures__/multi-splitted/: multi-splitted.r00  multi-splitted.r01  multi-splitted.rar
__fixtures__/rar5/: compressed.rar  stored.rar  test.rar
__fixtures__/rar5-multivolume/: multipart.part001.rar  multipart.part002.rar  multipart.part003.rar  multipart.part004.rar  multipart.part005.rar  multipart.part006.rar  multipart.part007.rar  multipart.part008.rar  multipart.part009.rar  multipart.part010.rar  multipart.part011.rar  multipart.part012.rar  multipart.part013.rar  multipart.part014.rar  testfile.txt
__fixtures__/sizes/: test_0_rar5.rar  test_1023_rar5.rar  test_102400_rar5.rar  test_1024_rar5.rar  test_1025_rar5.rar  test_1048576_rar5.rar  test_1_rar5.rar  test_255_rar5.rar  test_256_rar5.rar  test_257_rar5.rar  test_32767_rar5.rar  test_32768_rar5.rar  test_32769_rar5.rar  test_4095_rar5.rar  test_4096_rar5.rar  test_4097_rar5.rar  test_524288_rar5.rar  test_65535_rar5.rar  test_65536_rar5.rar  test_65537_rar5.rar
benches/: decompress.rs  vs_unrar.rs
example/: package-lock.json  package.json  pnpm-lock.yaml  server.js  webtorrent.js
examples/: basic.ts  benchmark_sizes.rs  browser.html  extract.rs  http-stream.mjs  http-stream.ts  profile.rs  profile_decode.rs  profile_once.rs  profile_parallel.rs  webtorrent-local-test.mjs  webtorrent-stream.mjs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive_rar4.rs  fuzz_archive_rar5.rs  fuzz_decompress_rar4.rs  fuzz_decompress_rar5.rs  fuzz_parse_rar4.rs  fuzz_parse_rar5.rs
lib/: browser.d.ts  browser.mjs  index.d.ts  index.js  index.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
pgo-data/: README.md
scripts/: bench_napi.mjs  pgo-bench.sh  postinstall.js  profile.sh  regenerate-pgo.sh  setup-large-tests.sh  test_real_compression.sh  verify_large.sh
src/: RarFile.js  RarFileBundle.js  RarHeaderParser.js  RarStream.js  crc32.rs  error.rs  file_media.rs  index.js  index.ts  inner-file-stream.js  inner-file-stream.ts  inner-file.js  inner-file.ts  inner_file.rs  interfaces.ts  lib.rs  local-file-media.js  local-file-media.ts  napi_bindings.rs  rar-file-bundle.js  rar-file-bundle.test.js  rar-file-bundle.test.ts  rar-file-bundle.ts  rar-file-chunk.js  rar-file-chunk.test.ts  rar-file-chunk.ts  rar-files-package.js  rar-files-package.test.js  rar-files-package.test.ts  rar-files-package.ts  rar-header-parser.js  rar-stream.js  rar-stream.test.ts  rar_file_chunk.rs  rar_files_package.rs  stream-utils.js  stream-utils.test.js  stream-utils.test.ts  stream-utils.ts  utils.ts  (+1 more)
src/__tests__/: rar-file-bundle-test.js  rar-file-chunk-test.js  rar-files-package-test.js  rar-stream-test.js  stream-utils-test.js
src/crypto/: mod.rs  rar4.rs  rar5.rs
src/decompress/: bit_reader.rs  byte_search.rs  huffman.rs  lzss.rs  mod.rs  rar29.rs  tests.rs  vm.rs
src/file/: AbstractFileMedia.js  FileMedia.js  FileMediaFactory.js  FileMediaTypes.js  LocalFileMedia.js  TorrentFileMedia.js  abstract-file-media.js  file-media-factory.js  file-media-types.js  file-media.js  file.js  index.js  local-file-media.js  rar-file.js  torrent-file-media.js
src/file-manifest/: file-chunk.js  file-manifest.js
src/file-media/: file-media.js  index.js  local-file-media.js  torrent-file-media.js
src/formats/: mod.rs
src/parsing/: AbstractParser.js  ArchiveHeadParser.js  MarkHeadParser.js  MarkerHeadParser.js  abstract-parser.js  archive-header-parser.js  archive-header-parser.test.js  archive-header-parser.test.ts  archive-header-parser.ts  archive_header.rs  file-header-parser.js  file-header-parser.test.js  file-header-parser.test.ts  file-header-parser.ts  file_header.rs  index.js  marker-header-parser.js  marker-header-parser.test.js  marker-header-parser.test.ts  marker-header-parser.ts  marker_header.rs  mod.rs  terminator-header-parser.js  terminator-header-parser.test.js  terminator-header-parser.test.ts  terminator-header-parser.ts  terminator_header.rs
src/rar-file/: file-chunk.js  rar-file-bundle.js  rar-file-chunk.js  rar-file.js  rar-stream.js
src/rar-manifest/: rar-manifest.js
test/: RarFileBundleTest.js  RarFileTest.js  RarHeaderParserTest.js  RarStreamTest.js  rar-file-bundle-test.js  rar-stream-test.js
test-browser/: e2e.test.ts  index.html  wasm.test.ts
test/binary-data/: multiple-files.rar  rar  single-short-filename.rar  singleFile.rar  unrar  whatsnew.txt
test/file/: AbstractFileMediaTest.js  FileMediaFactoryTest.js  FileMediaTest.js  LocalFileMediaTest.js  TorrentFileMediaTest.js  abstract-file-media-test.js  file-media-factory-test.js  file-media-test.js  file-test.js  local-file-media-test.js  rar-file-test.js  torrent-file-media-test.js
test/mocks/: mock-abstract-parser.js  mock-buffer-stream.js  mock-file-media.js  mock-parsers.js
test/parsing/: AbstractParserTest.js  ArchiveHeadParserTest.js  (+7 more)
(+84 files in other folders)
