[package]
name = "rar-stream"
version = "5.0.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/doom-fish/rar-stream"
documentation = "https://docs.rs/rar-stream"
readme = "README.md"
description = "High-performance RAR streaming library with optional async, crypto, NAPI, and WASM support"
keywords = ["rar", "archive", "streaming", "compression", "encryption"]
categories = ["compression", "encoding", "parser-implementations"]

[package.metadata.docs.rs]
# Build docs.rs with all features except napi (conflicts with wasm)
features = ["async", "crypto"]
# Document all features
all-features = false
# Show feature flags in docs
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Async file reading support
async = ["dep:tokio", "dep:futures"]
# Node.js NAPI bindings
napi = ["dep:napi", "dep:napi-derive", "async"]
# Browser WASM bindings
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# Encrypted archive support
crypto = ["dep:aes", "dep:cbc", "dep:pbkdf2", "dep:sha2", "dep:sha1"]

[dependencies]
# Core: ZERO dependencies!

# Async (optional)
tokio = { version = "1", features = ["fs", "io-util", "sync"], optional = true }
futures = { version = "0.3", optional = true }

# NAPI bindings (optional)
napi = { version = "2", features = ["async", "napi6", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
sha2 = { version = "0.10.9", optional = true }
sha1 = { version = "0.10.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decompress"
harness = false

[build-dependencies]
napi-build = "2"

# Strict linting configuration
[lints.rust]
# Allow unsafe for performance-critical paths (e.g., avoiding array zeroing)
unsafe_code = "warn"
# missing_docs disabled - NAPI/WASM bindings generate many internal types
missing_docs = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
items_after_statements = "allow"
cast_possible_wrap = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
type_complexity = "allow"
cognitive_complexity = "allow"
option_if_let_else = "allow"
if_not_else = "allow"
use_self = "allow"
uninlined_format_args = "allow"
manual_let_else = "allow"
needless_range_loop = "allow"
bool_to_int_with_if = "allow"
unnecessary_wraps = "allow"
struct_excessive_bools = "allow"
significant_drop_tightening = "allow"
needless_pass_by_ref_mut = "allow"
cast_precision_loss = "allow"
verbose_bit_mask = "allow"
useless_let_if_seq = "allow"
unused_self = "allow"
redundant_else = "allow"
match_same_arms = "allow"
redundant_closure_for_method_calls = "allow"
no_effect_underscore_binding = "allow"
needless_late_init = "allow"
map_unwrap_or = "allow"
io_other_error = "allow"
case_sensitive_file_extension_comparisons = "allow"
branches_sharing_code = "allow"
